# micorservice-demo-with-grpc-shared-utils

./: LICENSE  ReadMe.md  pyproject.toml
src/: __init__.py
src/micorservice_demo_with_grpc_shared_utils/: __init__.py  product_pb2.py  product_pb2.pyi  product_pb2_grpc.py  product_receiver_pb2.py  product_receiver_pb2.pyi  product_receiver_pb2_grpc.py  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
src/micorservice_demo_with_grpc_shared_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
